<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="upcoming_elect">Upcoming Elections</string>
    <string name="saved_elect">Saved Elections</string>
    <string name="find_representatives">Find My Representatives</string>
    <string name="election_info_text_with_var">Election Information: %s</string>
    <string name="election_info_text">Election Information</string>

    <string name="follow_button">Follow Election</string>
    <string name="unfollow_button">Unfollow Election</string>

    <string name="image_ballot_description">A person voting</string>
    <string name="politic_icon_description">Politic Image</string>
    <string name="web_icon_description">Web Icon</string>
    <string name="twitter_icon_description">Twitter Icon</string>
    <string name="facebook_icon_description">Facebook Icon</string>

    <string name="cities_desc">Cities</string>

    <string name="representative_search_text">Representative Search</string>
    <string name="address_line_1_text">Address Line 1</string>
    <string name="address_line_2_text">Address Line 2</string>
    <string name="city_text">City</string>
    <string name="zip_text">Zip</string>
    <string name="find_my_representatives_text">Find My Representatives</string>
    <string name="use_my_location_text">Use My Location</string>
    <string name="my_representatives_text">My Representatives</string>

    <string name="no_web_browser_found_msg">Web page not found</string>

    <string name="tool_election_info">Election Info</string>
    <string name="tool_ballot">ballot info</string>
    <string name="tool_location">location info</string>
    <string name="tool_follow">follow election</string>

</resources>
