<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Add data binding node for Voter Info ViewModel -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray50"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:backgroundTint="@color/colorPrimaryDark"
            app:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.selectedElection.name}"
            tools:title="App Bar Title" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/voter_info_elements_margin"
            android:layout_marginTop="@dimen/voter_info_elements_margin"
            android:text="@{viewModel.selectedElection.electionDay.toString()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/election_title"
            tools:text="01 November 2000" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/voter_info_elements_margin"
            android:textSize="@dimen/text_election_size"
            android:textStyle="italic"
            android:text="@string/election_info_text"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <!-- click binding to open web URL -->

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/tool_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />
<!--        android:onClick="@{() -> viewModel.stateLocationChange()}"-->

        <!-- click binding to open web URL -->
        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/tool_ballot"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />
<!--            android:onClick="@{() -> viewModel.stateBallotChange()}"   -->

        <!-- Add button to save election to Room -->
        <Button
            android:id="@+id/follow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/voter_info_elements_margin"
            android:layout_marginEnd="@dimen/voter_info_elements_margin"
            android:layout_marginBottom="@dimen/voter_info_elements_margin"
            android:onClick="@{() -> viewModel.onFollowButtonClick()}"
            app:followButtonText="@{viewModel.isElectionSaved}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/tool_follow"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>